--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body {
   font-family: "Ysabeau SC", sans-serif;
   font-style: normal;
   background: var(--haven-white);
+  padding: 14px 24px;
 }
 
 img {
@@ -25,7 +26,7 @@ nav {
   align-items: center;
 }
 
-@media screen and (max-width:900px) {
+@media screen and (max-width:480px) {
   nav {
     flex-direction: column;
     gap: 40px;
@@ -74,10 +75,10 @@ nav a {
   }
 }
 
-@media screen and (max-width:900px) {
+@media screen and (max-width:480px) {
   h1 {
     font-family: "Ysabeau SC", sans-serif;
-    font-size: 40px;
+    font-size: 24px;
   }
 }
 
